fix nav z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -164,6 +164,7 @@ nav {
 	top: 0;
 	left: 0;
 	width: 100%;
+	z-index: 3;
 
 	display: flex;
 	justify-content: space-around;
